--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -53,7 +53,7 @@
     }
 
     body {
-        @apply bg-[#fafafa] font-nunito;
+        @apply bg-[#F9F9F9] font-nunito;
     }
 
     body.dark {
@@ -66,6 +66,7 @@
     }
 
     /* Navbar */
+    
     .navbar-sticky header,
     .navbar-floating header {
         @apply sticky top-0 z-20;
@@ -94,12 +95,13 @@
     }
     .sidebar .nav-item > button.active,
     .sidebar .nav-item > a.active {
-        @apply bg-[#000]/[0.08] text-black dark:bg-[#181f32] dark:text-white-dark;
+        @apply bg-[#000]/[0.08] text-white dark:bg-slate-700 dark:text-white-dark;
     }
+    
 
     .sidebar .nav-item > button.active > div > span,
     .sidebar .nav-item > a.active > div > span {
-        @apply dark:!text-white-dark;
+        @apply dark:!text-white;
     }
 
     .sidebar ul.sub-menu li button,
@@ -145,7 +147,7 @@ hover:text-primary hover:before:!bg-primary ltr:before:mr-2 rtl:before:ml-2 dark
 
     .horizontal .dark .nav-item button div:first-child svg,
     .dark.horizontal .nav-item button div:first-child svg {
-        @apply text-white/50;
+        @apply text-white/0;
     }
 
     .horizontal-menu .nav-link {
